manifest/objects/Apttus_Base2__TelemetryMetric__c.object
<CustomObject>
    <description>Object used to capture a metric for analytics about a service. The metric is captured at runtime.</description>
    <fields>
        <fullName>Apttus_Base2__Attributes__c</fullName>
        <description>Long text area field used for capturing extra transaction data (in JSON format or similar) that was not captured in other fields.</description>
        <inlineHelpText>Long text area field used for capturing extra transaction data (in JSON format or similar) that was not captured in other fields.</inlineHelpText>
        <label>Attributes (Extra Operation Data)</label>
        <length>64000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__IsSynced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether this record has been synchronized with the external system or not. If so, data will be deleted in the next scheduled batch job run.</description>
        <inlineHelpText>Determines whether this record has been synchronized with the external system or not. If so, data will be deleted in the next scheduled batch job run.</inlineHelpText>
        <label>Is Record Synced?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__MetricType__c</fullName>
        <description>Type of metric captured.</description>
        <inlineHelpText>Type of metric captured.</inlineHelpText>
        <label>Metric Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPU Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Base2__OperationName__c</fullName>
        <description>Name of operation or event to log.</description>
        <inlineHelpText>Name of operation or event to log.</inlineHelpText>
        <label>Operation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__OrgId__c</fullName>
        <description>Salesforce organization id.</description>
        <inlineHelpText>Salesforce organization id.</inlineHelpText>
        <label>Org Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__PackageName__c</fullName>
        <description>Name of the product or package where this operation occurred.</description>
        <inlineHelpText>Name of the package, resource, or product where this operation occurred.</inlineHelpText>
        <label>Package or Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__PackageVersion__c</fullName>
        <description>Version of the package where this operation occurred.</description>
        <inlineHelpText>Version of the package where this operation occurred.</inlineHelpText>
        <label>Package Version</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__Timestamp__c</fullName>
        <description>Timestamp from when the operation occurred.</description>
        <inlineHelpText>Timestamp from when the operation occurred.</inlineHelpText>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__UnitOfMeasure__c</fullName>
        <description>Unit of measure for this metric.</description>
        <inlineHelpText>Unit of measure for this metric.</inlineHelpText>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Milliseconds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Base2__Value__c</fullName>
        <description>Metric value.</description>
        <inlineHelpText>Metric value.</inlineHelpText>
        <label>Metric Value</label>
        <length>64000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Telemetry Metric</label>
    <nameField>
        <displayFormat>TM-{00000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Telemetry Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>